--- a/projects/project-1/src/app/header/header.html
+++ b/projects/project-1/src/app/header/header.html
@@ -1,3 +1,5 @@
 <header>
+    <img src="assets/task-management.png" class="logo">
     <h1>EasyTask</h1>
+    <p>Manage your tasks efficiently</p>
 </header>
