--- a/projects/project-1/src/app/user/user.html
+++ b/projects/project-1/src/app/user/user.html
@@ -1,1 +1,6 @@
-<p>user works!</p>
+<div>
+    <button (click)="onUserClick()">
+        <img [src] = 'imagePath()'/>
+        <span>{{userName()}}</span>
+    </button>
+</div>
