add complete task

--- a/projects/project-1/src/app/app.html
+++ b/projects/project-1/src/app/app.html
@@ -15,7 +15,7 @@
     }
   </ul>
   @if (selectedUserId){
-    <app-task [name]="getUserNameById()"/>
+    <app-tasks [name]="getUserNameById()" [userId]="selectedUserId"/>
   }@else{
     <p>Select user to see tasks</p>
   }
