--- a/projects/project-1/src/app/tasks/tasks.html
+++ b/projects/project-1/src/app/tasks/tasks.html
@@ -7,6 +7,10 @@
     </header>
 
     <ul>
-        
+        @for (task of selectedTasks; track task.id){
+        <li>
+            <app-task [task]="task" (complete)="onCompleteTask(task.id)"></app-task>
+        </li>
+        }
     </ul>
 </section>
