--- a/projects/project-2/src/app/app.component.html
+++ b/projects/project-2/src/app/app.component.html
@@ -3,16 +3,16 @@
 
 <main>
   <div id="dashboard">
-    <div class="dashboard-item">
+    <app-dashboard-item [image]="{src: 'status.png', alt: 'status symbol'}" title="SERVER STATUS">
       <app-server-status></app-server-status>
-    </div>
+    </app-dashboard-item>
 
-    <div class="dashboard-item">
+    <app-dashboard-item [image]="{src: 'globe.png', alt: 'globe symbol'}" title="TRAFFIC">
       <app-traffic></app-traffic>
-    </div>
+    </app-dashboard-item>
 
-    <div class="dashboard-item">
+    <app-dashboard-item [image]="{src: 'list.png', alt: ''}" title="SUPPORT TICKETS">
       <app-tickets></app-tickets>
-    </div>
+    </app-dashboard-item>
   </div>
 </main>
