--- a/projects/project-2/src/app/dashboard/tickets/new-ticket/new-ticket.component.html
+++ b/projects/project-2/src/app/dashboard/tickets/new-ticket/new-ticket.component.html
@@ -1,9 +1,9 @@
-<form id="new-ticket">
+<form id="new-ticket" (submit)="onSubmit(titleInput.value, requestInput.value);" #form>
   <app-control label="Title">
-    <input name="title" id="title" type="text" />
+    <input name="title" id="title" type="text" #titleInput/>
   </app-control>
   <app-control label="Request">
-    <textarea name="request" id="request" rows="3"></textarea>
+    <textarea name="request" id="request" rows="3" #requestInput></textarea>
   </app-control>
   <p>
       <button appButton>
