--- a/projects/project-7/src/app/auth/login/login.component.html
+++ b/projects/project-7/src/app/auth/login/login.component.html
@@ -1,27 +1,20 @@
-<form #form="ngForm" (ngSubmit)="onSubmit(form)">
+<form [formGroup]="form" (ngSubmit)="onSubmit()">
   <h2>Login</h2>
-
   <div class="control-row">
     <div class="control no-margin">
       <label for="email">Email</label>
-      <input id="email" type="email" name="email" ngModel required email #email="ngModel"/>
+      <input id="email" type="email" [formControl]="form.controls.email"/>
     </div>
-
     <div class="control no-margin">
       <label for="password">Password</label>
-      <input id="password" type="password" name="password" ngModel  minlength="6" #password="ngModel"/>
+      <input id="password" type="password" formControlName="password"/>
     </div>
-
     <button class="button">Login</button>
   </div>
-  @if(email.touched && email.invalid && email.dirty) {
-    <p class = "control-error">
-    Invalid email
-    </p>
+  @if(emailIsInvalid){
+    <p class="control-error">Please enter a valid email address.</p>
   }
-  @if(password.touched && password.invalid && password.dirty) {
-    <p class = "control-error">
-    Invalid password
-    </p>
+  @if(passwordIsInvalid){
+    <p class="control-error">Password is required.</p>
   }
 </form>
